--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                   <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                  <img src="./assets/images/Logo.png" alt="logo"></a>
+                  <img src="Logo.png" alt="logo"></a>
               </div>
 
               <!-- Collect the nav links, forms, and other content for toggling -->
@@ -76,7 +76,7 @@
           </div>
           <div class="col-md-5 col-md-offset-2">
             <div class="ipad">
-              <img src="./assets/images/iphone.png" alt="phone" class="img-responsive">
+              <img src="iphone.png" alt="phone" class="img-responsive">
 
             </div>
 
@@ -308,3 +308,4 @@
 
 
 </html>
+
